[package]
name = "main-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
scylla = "0.12"
futures = "0.3.6"
uuid = { version = "1.0", features = ["serde"] }
bigdecimal = "0.4"
num-bigint = "0.3"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.80"
rust-s3 = "0.33.0"
reqwest = { version = "0.12.4", features = ["json"] }
openssl = "0.10.45"
axum-util = "0.2.2"
tower-http = { version = "0.5.1", features = ["cors"] }
rdkafka = "0.36.2"
tower-cookies = "0.10.0"
rand = "0.8.5"
http = "1.1.0"
